substrate/frame/support/test/tests/runtime_ui/invalid_runtime_type_derive.stderr
error: expected one of: `RuntimeCall`, `RuntimeEvent`, `RuntimeError`, `RuntimeOrigin`, `RuntimeFreezeReason`, `RuntimeHoldReason`, `RuntimeSlashReason`, `RuntimeLockId`
  --> tests/runtime_ui/invalid_runtime_type_derive.rs:24:21
   |
24 |     #[frame::derive(RuntimeInfo)]
   |                     ^^^^^^^^^^^
